--- a/src/GitHub.VisualStudio/UI/Views/PullRequestListView.xaml
+++ b/src/GitHub.VisualStudio/UI/Views/PullRequestListView.xaml
@@ -1,9 +1,9 @@
-﻿<uirx:SimpleViewUserControl x:Class="GitHub.VisualStudio.UI.Views.PullRequestList"
+﻿<local:GenericPullRequestListView x:Class="GitHub.VisualStudio.UI.Views.PullRequestListView"
                             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                             xmlns:cache="clr-namespace:GitHub.VisualStudio.Helpers"
                             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                            xmlns:local="clr-namespace:GitHub.VisualStudio.UI.Views.Controls"
+                            xmlns:local="clr-namespace:GitHub.VisualStudio.UI.Views"
                             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                             xmlns:sampleData="clr-namespace:GitHub.SampleData;assembly=GitHub.App"
                             xmlns:ui="clr-namespace:GitHub.UI;assembly=GitHub.UI"
@@ -24,9 +24,9 @@
   <UserControl.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
-        <cache:SharedDictionaryManager Source="pack://application:,,,/GitHub.VisualStudio;component/SharedDictionary.xaml" />
-        <cache:SharedDictionaryManager Source="pack://application:,,,/GitHub.UI;component/SharedDictionary.xaml" />
-        <cache:SharedDictionaryManager Source="pack://application:,,,/GitHub.VisualStudio;component/UI/Views/Controls/PullRequestListItem.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/GitHub.VisualStudio;component/SharedDictionary.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/GitHub.UI;component/SharedDictionary.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/GitHub.VisualStudio;component/UI/Views/Controls/PullRequestListItem.xaml" />
       </ResourceDictionary.MergedDictionaries>
       <ui:HasItemsVisibilityConverter x:Key="HasItemsVisibilityConverter" />
 
@@ -78,8 +78,11 @@
               VirtualizingPanel.IsVirtualizing="True"
               VirtualizingPanel.IsVirtualizingWhenGrouping="True"
               VirtualizingPanel.ScrollUnit="Pixel"
+              VirtualizingPanel.VirtualizationMode="Recycling"
+              VirtualizingPanel.CacheLength="1,1"
+              VirtualizingPanel.CacheLengthUnit="Page"
               Visibility="{Binding PullRequests, Converter={StaticResource HasItemsVisibilityConverter}}">
     </ListView>
 
   </Grid>
-</uirx:SimpleViewUserControl>
+</local:GenericPullRequestListView>
